--- a/Aula 2/index.html
+++ b/Aula 2/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
-        <script src="main.js"></script>
+        <script src="app.js"></script>
         <div class="container">
             <h1 class="page-title">
                 Conversor de moedas
