--- a/Aula 3/index.html
+++ b/Aula 3/index.html
@@ -6,11 +6,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Imersão Dev Alura - Aula 03</title>
-        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="stylesheet" href="style.css" />
     </head>
 
 <body>
-    <script src="main.js"></script>
+    <script src="app.js"></script>
     <div class="container">
         <h1 class="page-title">
             Mentalista
